--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "scratch-tools",
-  "version": "1.0.0",
-  "description": "Tools for interacting with Scratch, including API and cloud variables",
-  "main": "index.js",
+  "name": "scratchattach.js",
+  "version": "1.2.1",
+  "description": "",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "scratch",
-    "api",
-    "cloud",
-    "tools"
-  ],
   "author": "MubiLop",
   "license": "MIT",
   "dependencies": {
-    "node-fetch": "^3.0.0",
-    "ws": "^8.5.0"
+    "axios": "^1.6.8",
+    "scratchcloud": "^1.3.0",
+    "ws": "^7.4.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cicerorph/scratchattach.js"
   }
 }
